# opencv

./: main.py  pyproject.toml
my_week1/: application_sunglass_filter.ipynb  basic_math_operations.ipynb  bitwise_operations.ipynb  getting_started_with_images.ipynb
my_week2/: 1_read_and_display_video.ipynb  4_how_to_use_keyboard_in_opencv.ipynb  5_using_mouse_for_annotation.ipynb
my_week2/.ipynb_checkpoints/: 5_using_mouse_for_annotation-checkpoint.ipynb
my_week2/scriptFiles/: 1_VideoRead.py  4_using_the_keyboard_as_input_device_v2.py  5_using_the_mouse_for_annotation.py  6_using_trackbar_in_opencv.py  submission.py
my_week3/: Erosion_Dilation.ipynb  Implementation_of_Morphological_Operations.ipynb  Opening_Closing.ipynb  Thresholding.ipynb
my_week3/scriptFiles/: 5_connectedComponentAnalysis.py
week1_python/Script_file/: dataPath.py
week2_python/scriptFiles/: 3_adding_a_trackbar_as_controller.py
week3_python/NoteBooks/: 4_Opening_Closing.ipynb  5_Connected_Component_Analysis.ipynb
