[project]
name = "opencv-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.13.0.90",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "wheel>=0.46.3",
]
